--- a/index.html
+++ b/index.html
@@ -1,90 +1,58 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Steal a Brainrot Info</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Steal a Brainrot - Game Stats</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f0f2f5;
-      margin: 0;
+      background-color: #f0f0f0;
       padding: 20px;
-      text-align: center;
-    }
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       max-width: 400px;
       margin: auto;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    .card img {
-      width: 100px;
-      border-radius: 10px;
+    .logo {
+      width: 100%;
+      border-radius: 12px;
+      margin-bottom: 15px;
     }
     .title {
-      font-size: 1.4em;
-      margin: 10px 0;
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
-    .info {
-      font-size: 1em;
-      margin-top: 8px;
-      color: #333;
+    .stat {
+      font-size: 16px;
+      margin: 6px 0;
     }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <img src="https://tr.rbxcdn.com/9f9e1e4b9e6e6e6e6e6e6e6e6e6e6e6e/150/150/GameIcon/Png" alt="Game Icon">
-    <div class="title">Steal a Brainrot</div>
-    <div class="info" id="playerCount">Đang tải số người chơi...</div>
-    <div class="info" id="favorites">Đang tải lượt yêu thích...</div>
-    <div class="info" id="visits">Đang tải lượt truy cập...</div>
-  </div>
+  <img class="logo" src="https://tr.rbxcdn.com/180DAY-e4f5ae4a5d3f7bf1887e91a88b36931b/768/432/Image/Webp/noFilter" alt="Game Logo">
+  <div class="title" id="gameTitle">Loading...</div>
+  <div class="stat" id="playerCount">Players Online: ...</div>
+  <div class="stat" id="visits">Total Visits: ...</div>
+  <div class="stat" id="favorites">Favorites: ...</div>
 
   <script>
     const placeId = 109983668079237;
 
-    async function fetchGameData() {
-      try {
-        const res = await fetch(`https://games.roblox.com/v1/games?placeIds=${placeId}`);
-        const data = await res.json();
+    fetch(`https://games.roblox.com/v1/games?placeIds=${placeId}`)
+      .then(response => response.json())
+      .then(data => {
         const game = data.data[0];
-
-        document.getElementById("playerCount").textContent = `👥 ${game.playing.toLocaleString()} người đang chơi`;
-        document.getElementById("favorites").textContent = `❤️ ${game.favoritedCount.toLocaleString()} lượt yêu thích`;
-        document.getElementById("visits").textContent = `👣 ${game.visits.toLocaleString()} lượt truy cập`;
-      } catch (err) {
-        document.getElementById("playerCount").textContent = "Không thể tải dữ liệu 😢";
-        document.getElementById("favorites").textContent = "";
-        document.getElementById("visits").textContent = "";
-        console.error("Lỗi khi lấy dữ liệu:", err);
-      }
-    }
-
-    fetchGameData();
-  </script>
-
-</body>
-</html>          const card = document.getElementById(`card-${p.id}`);
-          if (card) {
-            card.querySelector(".count").textContent = "Không thể tải dữ liệu 😢";
-          }
-        });
-        console.error("Lỗi khi lấy dữ liệu:", err);
-      }
-    }
-
-    function toggleDarkMode() {
-      document.body.classList.toggle("dark");
-    }
-
-    renderCards();
-    updateCounts();
-    setInterval(updateCounts, 30000); // Cập nhật mỗi 30 giây
+        document.getElementById("gameTitle").innerText = game.name;
+        document.getElementById("playerCount").innerText = `Players Online: ${game.playing.toLocaleString()}`;
+        document.getElementById("visits").innerText = `Total Visits: ${game.visits.toLocaleString()}`;
+        document.getElementById("favorites").innerText = `Favorites: ${game.favoritedCount.toLocaleString()}`;
+      })
+      .catch(error => {
+        console.error("Failed to fetch game data:", error);
+        document.getElementById("gameTitle").innerText = "Unable to load game info";
+      });
   </script>
 
 </body>
