--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     .error {
       color: red;
       font-weight: bold;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -40,32 +41,45 @@
 
   <img class="logo" src="https://tr.rbxcdn.com/180DAY-e4f5ae4a5d3f7bf1887e91a88b36931b/768/432/Image/Webp/noFilter" alt="Game Logo">
   <div class="title" id="gameTitle">Loading game info...</div>
-  <div class="stat" id="playerCount">Players Online: ...</div>
-  <div class="stat" id="visits">Total Visits: ...</div>
+  <div class="stat" id="playerCount">Players online: ...</div>
+  <div class="stat" id="visits">Total visits: ...</div>
   <div class="stat" id="favorites">Favorites: ...</div>
+  <div class="error" id="errorMessage"></div>
 
   <script>
-    const placeId = 7709344486;
+    const placeId = 109983668079237;
+    const maxRetries = 10;
+    let attempt = 0;
 
-    fetch(`https://games.roblox.com/v1/games?placeIds=${placeId}`)
-      .then(response => {
-        if (!response.ok) throw new Error("Unable to fetch data from Roblox API");
-        return response.json();
-      })
-      .then(data => {
-        const game = data.data[0];
-        document.getElementById("gameTitle").innerText = game.name || "No game name found";
-        document.getElementById("playerCount").innerText = `Players Online: ${game.playing.toLocaleString()}`;
-        document.getElementById("visits").innerText = `Total Visits: ${game.visits.toLocaleString()}`;
-        document.getElementById("favorites").innerText = `Favorites: ${game.favoritedCount.toLocaleString()}`;
-      })
-      .catch(error => {
-        console.error("Error:", error);
-        document.getElementById("gameTitle").innerText = "Unable to load game info";
-        document.getElementById("playerCount").innerText = "";
-        document.getElementById("visits").innerText = "";
-        document.getElementById("favorites").innerText = "";
-      });
+    function fetchGameData() {
+      fetch(`https://games.roblox.com/v1/games?placeIds=${placeId}`)
+        .then(response => {
+          if (!response.ok) throw new Error("Failed to fetch data from Roblox API");
+          return response.json();
+        })
+        .then(data => {
+          const game = data.data[0];
+          document.getElementById("gameTitle").innerText = game.name || "Unnamed game";
+          document.getElementById("playerCount").innerText = `Players online: ${game.playing.toLocaleString()}`;
+          document.getElementById("visits").innerText = `Total visits: ${game.visits.toLocaleString()}`;
+          document.getElementById("favorites").innerText = `Favorites: ${game.favoritedCount.toLocaleString()}`;
+          document.getElementById("errorMessage").innerText = ""; // Clear error
+        })
+        .catch(error => {
+          attempt++;
+          document.getElementById("errorMessage").innerText = `⚠️ Error loading data (attempt ${attempt})`;
+          if (attempt < maxRetries) {
+            setTimeout(fetchGameData, 5000);
+          } else {
+            document.getElementById("gameTitle").innerText = "Unable to load game info";
+            document.getElementById("playerCount").innerText = "";
+            document.getElementById("visits").innerText = "";
+            document.getElementById("favorites").innerText = "";
+          }
+        });
+    }
+
+    fetchGameData();
   </script>
 
 </body>
