--- a/index.html
+++ b/index.html
@@ -1,49 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Roblox Game Stats</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Steal a Brainrot</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-      padding: 20px;
-      background: #f5f5f5;
+    body { font-family: Arial, sans-serif; background: #f4f4f9; margin: 0; padding: 20px; }
+    .card {
+      background: #fff; border-radius: 16px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      max-width: 400px; margin: auto; padding: 20px; text-align: center;
     }
-    img {
-      border-radius: 16px;
-      width: 250px;
-      margin: 15px 0;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-    .stat {
-      font-size: 18px;
-      margin: 8px 0;
-      color: #333;
-    }
+    img { width: 100%; border-radius: 12px; }
+    h2 { margin: 15px 0 5px; font-size: 20px; }
+    p { margin: 8px 0; font-size: 16px; }
   </style>
 </head>
 <body>
-  <h1 id="gameName">Loading...</h1>
-  <img id="thumbnail" alt="Game Thumbnail">
-  <div class="stat" id="playerCount"></div>
-  <div class="stat" id="visits"></div>
-  <div class="stat" id="favorites"></div>
+  <div class="card" id="info">Đang tải dữ liệu...</div>
 
   <script>
-    const apiUrl = "https://shiny-resonance-7d8d.triexemo.workers.dev/?placeId=109983668079237";
+    const placeId = 109983668079237;
+    const API = "https://solitary-wood-0a18.triexemo.workers.dev/?placeId=" + placeId;
+    const THUMB = `https://thumbnails.roblox.com/v1/places/gameicons?placeIds=${placeId}&returnPolicy=PlaceHolder&size=512x512&format=Png&isCircular=false`;
 
-    fetch(apiUrl)
+    fetch(API)
       .then(res => res.json())
-      .then(data => {
-        document.getElementById("thumbnail").src = data.thumbnail;
-        document.getElementById("gameName").innerText = data.name;
-        document.getElementById("playerCount").innerText = `Players Online: ${data.playing.toLocaleString()}`;
-        document.getElementById("visits").innerText = `Total Visits: ${data.visits.toLocaleString()}`;
-        document.getElementById("favorites").innerText = `Favorites: ${data.favorites.toLocaleString()}`;
+      .then(res => {
+        const game = res.data[0]; // lấy game từ JSON
+        document.getElementById("info").innerHTML = `
+          <img src="${THUMB}" alt="Game Logo">
+          <h2>${game.name}</h2>
+          <p>👥 Playing: ${game.playing.toLocaleString()}</p>
+          <p>🌍 Visit: ${game.visits.toLocaleString()}</p>
+          <p>⭐ Favorite: ${game.favoritedCount.toLocaleString()}</p>
+        `;
       })
       .catch(err => {
-        document.getElementById("gameName").innerText = "⚠️ Error loading data";
+        document.getElementById("info").innerText = "Không lấy được dữ liệu";
         console.error(err);
       });
   </script>
