--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <script>
     const placeId = 109983668079237;
-    const API = "https://solitary-wood-0a18.triexemo.workers.dev/?placeId=" + placeId;
+    const API = "https://tiny-recipe-ed80.triexemo.workers.dev/" + placeId;
     const THUMB = `https://thumbnails.roblox.com/v1/places/gameicons?placeIds=${placeId}&returnPolicy=PlaceHolder&size=512x512&format=Png&isCircular=false`;
 
     fetch(API)
