--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script>
     const placeId = 109983668079237;
     const API = "https://tiny-recipe-ed80.triexemo.workers.dev/" + placeId;
-    const THUMB = `https://thumbnails.roblox.com/v1/games/icons?universeIds=${game.universeId}&size=512x512&format=Png`;
+    const THUMB = "https://tr.rbxcdn.com/180DAY-e4f5ae4a5d3f7bf1887e91a88b36931b/768/432/Image/Webp/noFilter";`;
     fetch(API)
       .then(res => res.json())
       .then(res => {
